--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BrewTime</string>
+    <string name="beer_name">Beer Name</string>
+    <string name="beer_date_default">01/01/1970</string>
+    <string name="beer_name_default">Beer Name</string>
 </resources>
